--- a/packages/my-search/package.json
+++ b/packages/my-search/package.json
@@ -1,17 +1,14 @@
 {
-    "name": "@devcast/mars-button",
-    "description": "Webcomponent mars-button following open-wc recommendations",
+    "name": "@marcelagotta/my-search",
+    "description": "Webcomponent my search for the webcomponent edu path",
     "license": "MIT",
-    "author": "mars-button",
-    "version": "0.0.0",
+    "author": "Mars Gotta",
+    "version": "0.0.1",
     "main": "index.js",
     "module": "index.js",
     "scripts": {
       "analyze": "cem analyze --litelement",
       "start": "web-dev-server"
-    },
-    "dependencies": {
-      "lit": "^2.0.2"
     },
     "devDependencies": {
       "@custom-elements-manifest/analyzer": "^0.4.17",
