--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -7,6 +7,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@marcelagotta/my-search": "^1.0.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
